--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'com.typesafe.akka', name: 'akka-actor_2.10', version: '2.3.9'
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
+    compile group: 'com.beust', name: 'jcommander', version: '1.7'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    compile group: 'com.codepoetics', name: 'protonpack', version: 1.4
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
